lowered the bodyClick (body click) z-index to sit behind clicked elements. not sure why it stopped working, may need to return it to higher once the cause of this issue is found

--- a/app/sass/common.sass
+++ b/app/sass/common.sass
@@ -72,7 +72,7 @@ select
 // BODY CLICK
 #bodyClick
   +hidden
-  z-index: 1111
+  z-index: 1000
   +pointer
   width: 100%
   height: 100%
